--- a/Database-ejb/pom.xml
+++ b/Database-ejb/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pl.aj.uamproject.hairdresser</groupId>
-    <artifactId>ejb</artifactId>
+    <artifactId>Database-ejb</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>ejb</packaging>
 
