--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.aj.uamproject.hairdresser</groupId>
     <artifactId>AJFryzjerUAM-parent</artifactId>
@@ -7,11 +8,11 @@
     <packaging>pom</packaging>
     <name>AJFryzjerUAM-parent</name>
     <modules>
-        <module>war</module>
-        <module>ejb</module>
+        <module>RestAPI-war</module>
+        <module>Database-ejb</module>
         <module>ear</module>
-    <module>AJFryzjerUAM</module>
-  </modules>
+        <module>war-test</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -63,13 +64,13 @@
                 <artifactId>javaee-api</artifactId>
                 <version>${javaee-apiVersion}</version>
             </dependency>
-			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-api</artifactId>
-				<version>5.3.1</version>
-				<scope>test</scope>
-			</dependency>
+            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.3.1</version>
+                <scope>test</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
