--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <maven-war-pluginVersion>3.1.0</maven-war-pluginVersion>
         <maven-ejb-pluginVersion>3.0.1</maven-ejb-pluginVersion>
         <maven-ear-pluginVersion>2.10.1</maven-ear-pluginVersion>
-        <junit-version>5.3.1</junit-version>
     </properties>
 
     <build>
@@ -63,17 +62,11 @@
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
                 <version>${javaee-apiVersion}</version>
+                <scope>provided</scope>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>5.3.1</version>
-                <scope>test</scope>
-            </dependency>
-
         </dependencies>
     </dependencyManagement>
+
 
 
 </project>
