--- a/war-test/pom.xml
+++ b/war-test/pom.xml
@@ -1,17 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>AJFryzjerUAM</artifactId>
+    <groupId>pl.aj.uamproject.hairdresser</groupId>
+    <artifactId>war-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>AJFryzjerUAM</name>
-
-    <parent>
-        <groupId>pl.aj.uamproject.hairdresser</groupId>
-        <artifactId>AJFryzjerUAM-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
-
+    <packaging>war</packaging>
+    <name>war-test</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -58,6 +52,7 @@
             <version>7.0</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
