--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -2,11 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.aj.uamproject.hairdresser</groupId>
     <artifactId>ear</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>ear</packaging>
-
     <name>ear</name>
 	
 	 <parent>
@@ -15,44 +13,58 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>pl.aj.uamproject.hairdresser</groupId>
-            <artifactId>Database-ejb</artifactId>
-            <version>${project.version}</version>
-            <type>ejb</type>
-        </dependency>
-        <dependency>
-            <groupId>pl.aj.uamproject.hairdresser</groupId>
-            <artifactId>RestAPI-war</artifactId>
-            <version>${project.version}</version>
-            <type>war</type>
-        </dependency>
-    </dependencies>
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>2.0.0.Final</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <hostname>127.0.0.1</hostname>
+                    <port>9990</port>
+                    <username>admin</username>
+                    <password>admin</password>
+                    <name>ear.ear</name>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-ear-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <version>6</version>
-                    <defaultLibBundleDir>lib</defaultLibBundleDir>
-                </configuration>
+                <executions>
+                    <!-- Undeploy the application on clean -->
+                    <execution>
+                        <id>undeploy</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>undeploy</goal>
+                        </goals>
+                        <configuration>
+                            <ignoreMissingDeployment>true</ignoreMissingDeployment>
+                        </configuration>
+                    </execution>
+
+                    <!-- Deploy the application on install -->
+                    <execution>
+                        <id>deploy</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
-    
+    <dependencies>
+    <dependency>
+        <groupId>pl.aj.uamproject.hairdresser</groupId>
+        <artifactId>ejb</artifactId>
+        <version>${project.version}</version>
+        <type>ejb</type>
+    </dependency>
+    <dependency>
+        <groupId>pl.aj.uamproject.hairdresser</groupId>
+        <artifactId>war</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+    </dependency>
+</dependencies>
+
+
 </project>
