--- a/war/pom.xml
+++ b/war/pom.xml
@@ -42,7 +42,7 @@
             <groupId>pl.aj.uamproject.hairdresser</groupId>
             <artifactId>ejb</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
