--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "3.3.7",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.31.5",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.7.0",
+    "react-moment": "^0.8.4",
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
